--- a/notebooks/exploration/participant_visualizer.ipynb
+++ b/notebooks/exploration/participant_visualizer.ipynb
@@ -2304,7 +2304,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
