Added markdown tables to participant visualizer

--- a/notebooks/exploration/participant_visualizer.ipynb
+++ b/notebooks/exploration/participant_visualizer.ipynb
@@ -338,6 +338,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "| Participant Name | Eyes Open                | Eyes Closed                        |\n",
+    "|------------------|---------------------------|------------------------------------|\n",
+    "| Ann              | 1:100, 3:100              | 3:100                              |\n",
+    "| Anna             | 3:100                    | -                                  |\n",
+    "| Ann-m            | 5:25                     | 5:100                              |\n",
+    "| Bat-Sheva        | 2:100                    | -                                  |\n",
+    "| Batya            | 4:100                    | -                                  |\n",
+    "| Benny            | 4:20                     | 5:120                              |\n",
+    "| Dida             | -                        | Session 5 eliminated, late start (from 15 s) |\n",
+    "| Dov              | -                        | 3:100                              |\n",
+    "| Gita             | 1:170                    | 2:20, 4:20                         |\n",
+    "| Ilana            | 1:150, 4:20              | 1:80                               |\n",
+    "| Mazal            | 2:20                     | -                                  |\n",
+    "| Michael          | -                        | 2:100, 3:120                       |\n",
+    "| Miryam           | -                        | 1:100                              |\n",
+    "| Mordehai         | 2:100                    | -                                  |\n",
+    "| Naftali          | 1:150, 4:150, 5:100       | No data                            |\n",
+    "| Naomi            | -                        | 3:100, 5:100                       |\n",
+    "| Rahel            | 4:20                     | -                                  |\n",
+    "| Raya             | -                        | 1:100, 4:100                       |\n",
+    "| Tami             | 4:100                    | -                                  |\n",
+    "| Tina             | -                        | 3:150                              |\n",
+    "| Tova             | 1:100, 2:100              |                                    |\n",
+    "| Uri              | 1:130, 3:100              | -                                  |\n",
+    "| Yaacov           | 1:80                     | 1:10                               |\n",
+    "| Yaacov E         | 5:150                    | 4:100, 5:100                       |\n",
+    "| Yaffa            | -                        | 2:20, 4:40                         |\n",
+    "| Yossef           | 1:150, 3 eliminate        | 4:20                               |\n",
+    "\n",
+    "\n",
+    "A Total of 45/375 session needed adjustment for their number of frames taken to calculate the mean and std. In addition, 2 sessions have been found insufficient."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Students"
    ]
   },
@@ -610,6 +647,30 @@
     "    \"20_eyes_closed5\": 100,\n",
     "    \"24_eyes_open1\": 20\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Student ID | Eyes Open                    | Eyes Closed                                |\n",
+    "|------------|-------------------------------|--------------------------------------------|\n",
+    "| 2          | 1:20, 2:20, 4:20, 5:20         | 3:30, 5:30                                |\n",
+    "| 3          | -                             | 1:120, 3:120, 4:100                       |\n",
+    "| 5          | 2:100, 3:20                   | -                                          |\n",
+    "| 6          | -                             | 3:10 (missing data from 2.2 to 6.6 seconds) |\n",
+    "| 8          | 3:120, 4:100                  | 1:100, 2:70, 4:100, 5:130                 |\n",
+    "| 9          | -                             | 2:120                                     |\n",
+    "| 11         | -                             | 2:100                                     |\n",
+    "| 13         | 2:120                         | -                                          |\n",
+    "| 14         | -                             | 4:100, 5:100                              |\n",
+    "| 16         | 2:100                         | -                                          |\n",
+    "| 18         | -                             | 2:100                                     |\n",
+    "| 19         | 1:100, 3:80                   | 1:10, 3:20                                |\n",
+    "| 20         | 4:100                         | 3:20, 5:100                               |\n",
+    "| 24         | 1:20                          | -                                          |\n",
+    "\n",
+    "A total of 32/270 sessions needed adjustments for their number of frames taken to calculate the mean and std. One session has been found insufficient."
    ]
   },
   {
@@ -2300,6 +2361,11 @@
    "source": [
     "len(student_results)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
