--- a/notebooks/device_comparision/check_assumption.ipynb
+++ b/notebooks/device_comparision/check_assumption.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
       "closed     ML Variance               37   Not normal      Yes                  Both violated\n",
       "closed     Path length               37   Normal          Yes                  Heterosced\n",
       "closed     Sway RMS                  37   Normal          Yes                  Heterosced\n",
-      "open       AP MAD                    38   Normal          Yes                  Heterosced\n",
+      "open       AP MAD                    38   Normal          No                   Assumptions met\n",
       "open       AP Max abs dev            38   Not normal      Yes                  Both violated\n",
       "open       AP Range                  38   Not normal      Yes                  Both violated\n",
       "open       AP Variance               38   Not normal      Yes                  Both violated\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
       "closed     AP Range                  134  Normal          No                   Assumptions met\n",
       "closed     AP Variance               134  Not normal      Yes                  Both violated\n",
       "closed     Ellipse area              134  Not normal      Yes                  Both violated\n",
-      "closed     ML MAD                    134  Normal          No                   Assumptions met\n",
+      "closed     ML MAD                    134  Normal          Yes                  Heterosced\n",
       "closed     ML Max abs dev            134  Not normal      No                   Non-normal\n",
       "closed     ML Range                  134  Normal          No                   Assumptions met\n",
       "closed     ML Variance               134  Not normal      Yes                  Both violated\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
