--- a/notebooks/exploration/participant_visualizer.ipynb
+++ b/notebooks/exploration/participant_visualizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1587,7 +1587,7 @@
        "8250"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1676,31 +1676,201 @@
        "      <td>ML Variance</td>\n",
        "      <td>0.469115</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Force_Plate</td>\n",
+       "      <td>ML Variance</td>\n",
+       "      <td>0.515535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ZED_COM</td>\n",
+       "      <td>AP Variance</td>\n",
+       "      <td>0.206641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Force_Plate</td>\n",
+       "      <td>AP Variance</td>\n",
+       "      <td>0.272187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ZED_COM</td>\n",
+       "      <td>ML MAD</td>\n",
+       "      <td>0.476687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Force_Plate</td>\n",
+       "      <td>ML MAD</td>\n",
+       "      <td>0.409900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ZED_COM</td>\n",
+       "      <td>AP MAD</td>\n",
+       "      <td>0.319502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Force_Plate</td>\n",
+       "      <td>AP MAD</td>\n",
+       "      <td>0.326000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ZED_COM</td>\n",
+       "      <td>ML Max abs dev</td>\n",
+       "      <td>1.663255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Force_Plate</td>\n",
+       "      <td>ML Max abs dev</td>\n",
+       "      <td>1.788275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ZED_COM</td>\n",
+       "      <td>AP Max abs dev</td>\n",
+       "      <td>1.180825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Force_Plate</td>\n",
+       "      <td>AP Max abs dev</td>\n",
+       "      <td>2.196576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ZED_COM</td>\n",
+       "      <td>Ellipse area</td>\n",
+       "      <td>5.805158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Force_Plate</td>\n",
+       "      <td>Ellipse area</td>\n",
+       "      <td>6.909158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ZED_COM</td>\n",
+       "      <td>Path length</td>\n",
+       "      <td>90.520605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Force_Plate</td>\n",
+       "      <td>Path length</td>\n",
+       "      <td>211.252706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ZED_COM</td>\n",
+       "      <td>Sway RMS</td>\n",
+       "      <td>0.821527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>ann</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Force_Plate</td>\n",
+       "      <td>Sway RMS</td>\n",
+       "      <td>0.887389</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  participant name   state trial       device       metric     value\n",
-       "0              ann  closed     1      ZED_COM     ML Range  3.067861\n",
-       "1              ann  closed     1  Force_Plate     ML Range  3.553300\n",
-       "2              ann  closed     1      ZED_COM     AP Range  2.233027\n",
-       "3              ann  closed     1  Force_Plate     AP Range  3.547500\n",
-       "4              ann  closed     1      ZED_COM  ML Variance  0.469115"
+       "   participant name   state trial       device          metric       value\n",
+       "0               ann  closed     1      ZED_COM        ML Range    3.067861\n",
+       "1               ann  closed     1  Force_Plate        ML Range    3.553300\n",
+       "2               ann  closed     1      ZED_COM        AP Range    2.233027\n",
+       "3               ann  closed     1  Force_Plate        AP Range    3.547500\n",
+       "4               ann  closed     1      ZED_COM     ML Variance    0.469115\n",
+       "5               ann  closed     1  Force_Plate     ML Variance    0.515535\n",
+       "6               ann  closed     1      ZED_COM     AP Variance    0.206641\n",
+       "7               ann  closed     1  Force_Plate     AP Variance    0.272187\n",
+       "8               ann  closed     1      ZED_COM          ML MAD    0.476687\n",
+       "9               ann  closed     1  Force_Plate          ML MAD    0.409900\n",
+       "10              ann  closed     1      ZED_COM          AP MAD    0.319502\n",
+       "11              ann  closed     1  Force_Plate          AP MAD    0.326000\n",
+       "12              ann  closed     1      ZED_COM  ML Max abs dev    1.663255\n",
+       "13              ann  closed     1  Force_Plate  ML Max abs dev    1.788275\n",
+       "14              ann  closed     1      ZED_COM  AP Max abs dev    1.180825\n",
+       "15              ann  closed     1  Force_Plate  AP Max abs dev    2.196576\n",
+       "16              ann  closed     1      ZED_COM    Ellipse area    5.805158\n",
+       "17              ann  closed     1  Force_Plate    Ellipse area    6.909158\n",
+       "18              ann  closed     1      ZED_COM     Path length   90.520605\n",
+       "19              ann  closed     1  Force_Plate     Path length  211.252706\n",
+       "20              ann  closed     1      ZED_COM        Sway RMS    0.821527\n",
+       "21              ann  closed     1  Force_Plate        Sway RMS    0.887389"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "older_adult_results.head()"
+    "older_adult_results.head(22)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2344,7 +2514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2353,7 +2523,7 @@
        "5918"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2361,11 +2531,6 @@
    "source": [
     "len(student_results)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
