--- a/notebooks/device_comparision/check_assumption.ipynb
+++ b/notebooks/device_comparision/check_assumption.ipynb
@@ -154,25 +154,39 @@
       "--------------------------------------------------------------------------------------\n",
       "closed     AP MAD                    184  Not normal      No                   Non-normal\n",
       "closed     AP Max abs dev            184  Not normal      Yes                  Both violated\n",
+      "closed     AP MedAD                  184  Not normal      No                   Non-normal\n",
+      "closed     AP RMS                    184  Not normal      Yes                  Both violated\n",
       "closed     AP Range                  184  Not normal      Yes                  Both violated\n",
+      "closed     AP STD                    184  Not normal      Yes                  Both violated\n",
       "closed     AP Variance               184  Not normal      Yes                  Both violated\n",
       "closed     Ellipse area              184  Not normal      Yes                  Both violated\n",
       "closed     ML MAD                    184  Normal          No                   Assumptions met\n",
       "closed     ML Max abs dev            184  Not normal      Yes                  Both violated\n",
+      "closed     ML MedAD                  184  Normal          No                   Assumptions met\n",
+      "closed     ML RMS                    184  Not normal      Yes                  Both violated\n",
       "closed     ML Range                  184  Not normal      Yes                  Both violated\n",
+      "closed     ML STD                    184  Not normal      Yes                  Both violated\n",
       "closed     ML Variance               184  Not normal      Yes                  Both violated\n",
       "closed     Path length               184  Not normal      Yes                  Both violated\n",
+      "closed     Range Ratio               184  Not normal      No                   Non-normal\n",
       "closed     Sway RMS                  184  Not normal      Yes                  Both violated\n",
       "open       AP MAD                    189  Not normal      No                   Non-normal\n",
       "open       AP Max abs dev            189  Not normal      Yes                  Both violated\n",
+      "open       AP MedAD                  189  Not normal      No                   Non-normal\n",
+      "open       AP RMS                    189  Not normal      Yes                  Both violated\n",
       "open       AP Range                  189  Not normal      Yes                  Both violated\n",
+      "open       AP STD                    189  Not normal      Yes                  Both violated\n",
       "open       AP Variance               189  Not normal      Yes                  Both violated\n",
       "open       Ellipse area              189  Not normal      Yes                  Both violated\n",
       "open       ML MAD                    189  Not normal      Yes                  Both violated\n",
       "open       ML Max abs dev            189  Not normal      Yes                  Both violated\n",
+      "open       ML MedAD                  189  Not normal      Yes                  Both violated\n",
+      "open       ML RMS                    189  Not normal      Yes                  Both violated\n",
       "open       ML Range                  189  Not normal      Yes                  Both violated\n",
+      "open       ML STD                    189  Not normal      Yes                  Both violated\n",
       "open       ML Variance               189  Not normal      Yes                  Both violated\n",
       "open       Path length               189  Not normal      Yes                  Both violated\n",
+      "open       Range Ratio               189  Not normal      Yes                  Both violated\n",
       "open       Sway RMS                  189  Not normal      Yes                  Both violated\n",
       " Saved assumptions summary to: assumptions\\oa_trial_assumptions.csv\n"
      ]
@@ -195,25 +209,39 @@
       "--------------------------------------------------------------------------------------\n",
       "closed     AP MAD                    37   Normal          No                   Assumptions met\n",
       "closed     AP Max abs dev            37   Not normal      Yes                  Both violated\n",
+      "closed     AP MedAD                  37   Normal          No                   Assumptions met\n",
+      "closed     AP RMS                    37   Normal          No                   Assumptions met\n",
       "closed     AP Range                  37   Not normal      Yes                  Both violated\n",
+      "closed     AP STD                    37   Normal          No                   Assumptions met\n",
       "closed     AP Variance               37   Not normal      Yes                  Both violated\n",
       "closed     Ellipse area              37   Not normal      Yes                  Both violated\n",
       "closed     ML MAD                    37   Normal          No                   Assumptions met\n",
       "closed     ML Max abs dev            37   Not normal      Yes                  Both violated\n",
+      "closed     ML MedAD                  37   Normal          No                   Assumptions met\n",
+      "closed     ML RMS                    37   Normal          No                   Assumptions met\n",
       "closed     ML Range                  37   Not normal      Yes                  Both violated\n",
+      "closed     ML STD                    37   Normal          No                   Assumptions met\n",
       "closed     ML Variance               37   Not normal      Yes                  Both violated\n",
       "closed     Path length               37   Normal          Yes                  Heterosced\n",
+      "closed     Range Ratio               37   Normal          No                   Assumptions met\n",
       "closed     Sway RMS                  37   Normal          Yes                  Heterosced\n",
-      "open       AP MAD                    38   Normal          No                   Assumptions met\n",
+      "open       AP MAD                    38   Normal          Yes                  Heterosced\n",
       "open       AP Max abs dev            38   Not normal      Yes                  Both violated\n",
+      "open       AP MedAD                  38   Normal          No                   Assumptions met\n",
+      "open       AP RMS                    38   Normal          Yes                  Heterosced\n",
       "open       AP Range                  38   Not normal      Yes                  Both violated\n",
+      "open       AP STD                    38   Not normal      Yes                  Both violated\n",
       "open       AP Variance               38   Not normal      Yes                  Both violated\n",
       "open       Ellipse area              38   Not normal      Yes                  Both violated\n",
       "open       ML MAD                    38   Normal          Yes                  Heterosced\n",
       "open       ML Max abs dev            38   Not normal      Yes                  Both violated\n",
+      "open       ML MedAD                  38   Normal          Yes                  Heterosced\n",
+      "open       ML RMS                    38   Not normal      Yes                  Both violated\n",
       "open       ML Range                  38   Not normal      Yes                  Both violated\n",
+      "open       ML STD                    38   Normal          Yes                  Heterosced\n",
       "open       ML Variance               38   Not normal      Yes                  Both violated\n",
       "open       Path length               38   Not normal      Yes                  Both violated\n",
+      "open       Range Ratio               38   Normal          No                   Assumptions met\n",
       "open       Sway RMS                  38   Not normal      Yes                  Both violated\n",
       " Saved assumptions summary to: assumptions\\oa_average_assumptions.csv\n"
      ]
@@ -243,25 +271,39 @@
       "--------------------------------------------------------------------------------------\n",
       "closed     AP MAD                    134  Not normal      No                   Non-normal\n",
       "closed     AP Max abs dev            134  Not normal      No                   Non-normal\n",
+      "closed     AP MedAD                  134  Not normal      No                   Non-normal\n",
+      "closed     AP RMS                    134  Normal          No                   Assumptions met\n",
       "closed     AP Range                  134  Normal          No                   Assumptions met\n",
+      "closed     AP STD                    134  Not normal      No                   Non-normal\n",
       "closed     AP Variance               134  Not normal      Yes                  Both violated\n",
       "closed     Ellipse area              134  Not normal      Yes                  Both violated\n",
-      "closed     ML MAD                    134  Normal          Yes                  Heterosced\n",
+      "closed     ML MAD                    134  Normal          No                   Assumptions met\n",
       "closed     ML Max abs dev            134  Not normal      No                   Non-normal\n",
+      "closed     ML MedAD                  134  Normal          Yes                  Heterosced\n",
+      "closed     ML RMS                    134  Not normal      No                   Non-normal\n",
       "closed     ML Range                  134  Normal          No                   Assumptions met\n",
+      "closed     ML STD                    134  Normal          No                   Assumptions met\n",
       "closed     ML Variance               134  Not normal      Yes                  Both violated\n",
       "closed     Path length               134  Not normal      Yes                  Both violated\n",
+      "closed     Range Ratio               134  Not normal      Yes                  Both violated\n",
       "closed     Sway RMS                  134  Not normal      No                   Non-normal\n",
       "open       AP MAD                    135  Normal          No                   Assumptions met\n",
       "open       AP Max abs dev            135  Normal          Yes                  Heterosced\n",
+      "open       AP MedAD                  135  Normal          No                   Assumptions met\n",
+      "open       AP RMS                    135  Normal          No                   Assumptions met\n",
       "open       AP Range                  135  Normal          Yes                  Heterosced\n",
+      "open       AP STD                    135  Normal          No                   Assumptions met\n",
       "open       AP Variance               135  Not normal      Yes                  Both violated\n",
       "open       Ellipse area              135  Not normal      Yes                  Both violated\n",
       "open       ML MAD                    135  Normal          No                   Assumptions met\n",
       "open       ML Max abs dev            135  Not normal      No                   Non-normal\n",
+      "open       ML MedAD                  135  Normal          No                   Assumptions met\n",
+      "open       ML RMS                    135  Normal          No                   Assumptions met\n",
       "open       ML Range                  135  Normal          No                   Assumptions met\n",
+      "open       ML STD                    135  Normal          No                   Assumptions met\n",
       "open       ML Variance               135  Not normal      Yes                  Both violated\n",
       "open       Path length               135  Normal          Yes                  Heterosced\n",
+      "open       Range Ratio               135  Not normal      Yes                  Both violated\n",
       "open       Sway RMS                  135  Normal          No                   Assumptions met\n",
       " Saved assumptions summary to: assumptions\\st_trial_assumptions.csv\n"
      ]
@@ -284,25 +326,39 @@
       "--------------------------------------------------------------------------------------\n",
       "closed     AP MAD                    27   Normal          No                   Assumptions met\n",
       "closed     AP Max abs dev            27   Normal          No                   Assumptions met\n",
+      "closed     AP MedAD                  27   Normal          No                   Assumptions met\n",
+      "closed     AP RMS                    27   Normal          No                   Assumptions met\n",
       "closed     AP Range                  27   Normal          No                   Assumptions met\n",
+      "closed     AP STD                    27   Normal          No                   Assumptions met\n",
       "closed     AP Variance               27   Normal          No                   Assumptions met\n",
       "closed     Ellipse area              27   Normal          No                   Assumptions met\n",
       "closed     ML MAD                    27   Normal          No                   Assumptions met\n",
       "closed     ML Max abs dev            27   Normal          No                   Assumptions met\n",
+      "closed     ML MedAD                  27   Normal          No                   Assumptions met\n",
+      "closed     ML RMS                    27   Normal          No                   Assumptions met\n",
       "closed     ML Range                  27   Normal          No                   Assumptions met\n",
+      "closed     ML STD                    27   Normal          No                   Assumptions met\n",
       "closed     ML Variance               27   Normal          No                   Assumptions met\n",
       "closed     Path length               27   Normal          Yes                  Heterosced\n",
+      "closed     Range Ratio               27   Normal          No                   Assumptions met\n",
       "closed     Sway RMS                  27   Normal          No                   Assumptions met\n",
       "open       AP MAD                    27   Normal          No                   Assumptions met\n",
       "open       AP Max abs dev            27   Normal          No                   Assumptions met\n",
+      "open       AP MedAD                  27   Normal          No                   Assumptions met\n",
+      "open       AP RMS                    27   Normal          No                   Assumptions met\n",
       "open       AP Range                  27   Normal          No                   Assumptions met\n",
+      "open       AP STD                    27   Normal          No                   Assumptions met\n",
       "open       AP Variance               27   Normal          Yes                  Heterosced\n",
       "open       Ellipse area              27   Not normal      Yes                  Both violated\n",
       "open       ML MAD                    27   Normal          No                   Assumptions met\n",
       "open       ML Max abs dev            27   Normal          No                   Assumptions met\n",
+      "open       ML MedAD                  27   Normal          No                   Assumptions met\n",
+      "open       ML RMS                    27   Normal          No                   Assumptions met\n",
       "open       ML Range                  27   Normal          No                   Assumptions met\n",
+      "open       ML STD                    27   Normal          No                   Assumptions met\n",
       "open       ML Variance               27   Not normal      Yes                  Both violated\n",
       "open       Path length               27   Normal          Yes                  Heterosced\n",
+      "open       Range Ratio               27   Normal          No                   Assumptions met\n",
       "open       Sway RMS                  27   Normal          No                   Assumptions met\n",
       " Saved assumptions summary to: assumptions\\st_average_assumptions.csv\n"
      ]
@@ -315,7 +371,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -329,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
