--- a/notebooks/exploration/phones_data_visualize.ipynb
+++ b/notebooks/exploration/phones_data_visualize.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
-    "import pandas\n",
     "\n",
     "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\", \"..\"))\n",
     "if project_root not in sys.path:\n",
@@ -17,12 +16,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'q_rotate' from 'ahrs.common.orientation' (c:\\fall_risk_analysis\\myenv\\lib\\site-packages\\ahrs\\common\\orientation.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_and_process_phone_data, estimate_delay_cross_correlation, sync_and_plot_phones, butter_filter, sync_phones_only, calculate_delay_table, apply_orientation_correction\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\fall_risk_analysis\\src\\preprocessing.py:10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msignal\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m butter, filtfilt\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mahrs\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfilters\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Madgwick\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mahrs\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01morientation\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m q_rotate\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Define project root and data directories\u001b[39;00m\n\u001b[0;32m     13\u001b[0m PROJECT_ROOT \u001b[38;5;241m=\u001b[39m Path(\u001b[38;5;18m__file__\u001b[39m)\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39mparent\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'q_rotate' from 'ahrs.common.orientation' (c:\\fall_risk_analysis\\myenv\\lib\\site-packages\\ahrs\\common\\orientation.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from src.preprocessing import load_and_process_phone_data, estimate_delay_cross_correlation, sync_and_plot_phones, butter_filter, sync_phones_only, calculate_delay_table, apply_orientation_correction\n",
+    "import pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from src.preprocessing import load_and_process_phone_data, estimate_delay_cross_correlation, sync_and_plot_phones, butter_filter, sync_phones_only, calculate_delay_table\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
